--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,1 +1,14 @@
 name: Tests
+
+on:
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - main
+
+jobs:
+    test:
+        runs-on: ubuntu-latest
+    #steps:
